# rust_game_template

./: .gitignore  Cargo.toml  Makefile.toml  Makefile.was.toml  README.md  Readme.md  Readme.md.template  cargo-generate.toml  dev.env  mobile.hbs  mobile.toml  post-script.rhai  private.toml.template
.github/workflows/: Alpha.yml  Alpha.yml.template  Android.yml  AndroidCommon.yml  AndroidPr.yml  AndroidPush.yml  AndroidPush.yml.template  AppropriateBranch.yml  AppropriateBranchBeta.yml  AppropriateBranchMaster.yml  AutoPr.yml  AutoPrToAlpha.yml  AutoPrToBeta.yml  AutoPrToMaster.yml  Beta.yml  Beta.yml.template  BetaPrApprove.yml  Conditional.yml  Conditional.yml.template  Crossbuild.yml  Delete.yml  Desktop.yml  DesktopAlpha.yml  DesktopBeta.yml  DesktopCommon.yml  DesktopPr.yml  DesktopPush.yml  DesktopPush.yml.template  Forward.yml  Forward.yml.template  ForwardFromAlpha.yml  ForwardFromBeta.yml  IosCommon.yml  IosPr.yml  IosPush.yml  IosPush.yml.template  MasterPrApprove.yml  Merge.yml  PullRequest.yml.template  Push.yml  (+15 more)
android/: Cargo.toml  Makefile.toml
android/src/: lib.rs
desktop/: Cargo.toml  Makefile.toml
doc/: InstancingTemplate.md  InstantiatingTemplate.md  Readme.md  Resource.md  Resources.md
doc/bevy/: Readme.md
doc/platform/: Android.md  Desktop.md  Web.md  iOS.md
ios/: Cargo.toml  Makefile.toml  project.hbs  project.yml
ios/scripts/: generate-ios-config.rs
module/renderer/: .gitignore  Cargo.toml  Makefile.dev.toml  Makefile.toml  Readme.md  Readme.md.template
module/renderer/bevy/: Cargo.toml  Extension.toml  Settings.toml  main.rs
module/renderer/bevy/src/: main.rs
module/renderer/miniquad/: Cargo.toml  Extension.toml
module/renderer/miniquad/src/: main.rs
module/renderer/platform/android/: Cargo.toml  Makefile.toml
module/renderer/platform/android/src/: lib.rs
module/renderer/platform/desktop/: Cargo.toml  Makefile.toml
module/renderer/platform/desktop/src/: main.rs
module/renderer/platform/ios/: .gitignore  Cargo.toml  Makefile.toml  mobile.hbs  mobile.toml.hbs
module/renderer/platform/ios/scripts/: generate-ios-config.rs
module/renderer/platform/ios/src/: lib.rs
module/renderer/platform/ios/step/: generate-ios-config.rs  generate_ios_config.rs
module/renderer/platform/ios/xcode/: project.hbs  project.yml.hbs
module/renderer/platform/ios/xcode/Sources/game_template/bindings/: bindings.h
module/renderer/platform/ios/xcode/Sources/webgpu/: main.mm
module/renderer/platform/ios/xcode/Sources/webgpu/bindings/: bindings.h
module/renderer/platform/wasi/: Cargo.toml  Makefile.toml
module/renderer/platform/wasi/src/: main.rs
module/renderer/platform/web/: Cargo.toml  Makefile.toml  package-lock.json
module/renderer/platform/web/scripts/: browserSync.ss
module/renderer/platform/web/src/: main.rs
module/renderer/platform/web/static/: index.html
module/renderer/platform/web/static_miniquad/: index.html
module/renderer/platform/web/step/: BrowserSync.ss  browserSync.ss
module/renderer/src/: common.rs  lib.rs  main.rs  mobile.rs  shader.wgsl
module/renderer/src/wgpu/: common.rs
module/renderer/step/: hard_link.ss  package.json
module/renderer/wgpu/: Cargo.toml  Extension.toml  Settings.toml
module/renderer/wgpu/src/: main.rs  shader.wgsl
scripts/: generate-ios-config.rs
src/: android.rs  common.rs  lib.rs  main.rs
static/: index.html
step/: BuildWeb.sh
tests/: Abstract.test.ss  Ext.test.ss  package-lock.json  package.json
web/: Cargo.toml  Makefile.toml
web/src/: main.rs
