

[package]
name = "game_template"
version = "0.0.1"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Volodymyr M. <volodymyr.migdal@gmail.com>",
  "Dmytro Kryvoruchko <dm.vict.kr@gmail.com>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/game_template"
repository = "https://github.com/Wandalen/rust_game_template/"
homepage = "https://github.com/Wandalen/rust_game_template/"
description = """
Neutral cross-platform Rust game template.
"""
categories = [ "game-development", "game-engines" ]
keywords = [ "game-template", "gamedev" ]

include = [
  "/src",
  "/Cargo.toml",
  "/Readme.md",
  "/License",
]

[features]
# web = [ "wgpu/webgl", "winit/web-sys", "wee_alloc" ]
web = [ "wgpu/webgl", "winit/web-sys" ]
default = []

# [target.'cfg( target_arch = "wasm32" )'.features]
# default = [ "web" ]

[lib]
name = "game_template"
crate-type = [ "staticlib", "lib", "cdylib" ]
path = "./src/main.rs"

[[bin]]
name = "web"
path = "./src/main.rs"
required-features = [ "web" ]

[package.metadata.android]
fullscreen = false
launch_mode = "singleTask"
min_sdk_version = 30
target_sdk_version = 30
build_targets = [ "aarch64-linux-android" ]

# qqq : explain each dependency

[dependencies]
wgpu = "0.11.0" #qqq : Update to latest, check changes https://github.com/gfx-rs/wgpu/blob/v0.11/CHANGELOG.md
winit = { version = "0.25.0", features = [] }
pollster = "0.2"
byte-slice-cast = "1.2.0"

[target.'cfg( target_arch = "wasm32" )'.dependencies]
wasm-bindgen-futures = "0.4.28"
console_log = "0.2.0"
web-sys = "0.3.53"
web-log = "1.0.0"
log = "0.4"
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size compared to the default allocator's ~10K
wee_alloc = { version = "0.4.5", optional = true }

[target.'cfg( target_arch = "wasm32" )'.dev-dependencies]
console_error_panic_hook = { version = "0.1.7" }
# wasm testing under browser
# wasm-bindgen-test = "0.3.13"

[target.'cfg( target_os = "ios" )'.dependencies]
mobile-entry-point = "0.1.0" # qqq : talk?

[target.'cfg( target_os = "android" )'.dependencies]
android_logger = "0.10.1"
ndk-glue = { version = "0.3.0", features = [ "logger" ] }
ndk-sys = "0.2.1"
log = "0.4" # qqq : ?
