[package]
name = "webgpu-android"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "lib", "cdylib"]
path = "src/lib.rs"

[dependencies]
webgpu = { path = "../.." }
android_logger = "0.10.1"
ndk-glue = {version = "0.3.0", features = ["logger"]}
ndk-sys = "0.2.1"
log = "0.4"

[package.metadata.android]
fullscreen = false
launch_mode = "singleTask"
min_sdk_version = 30
target_sdk_version = 30
build_targets = ["aarch64-linux-android"]

